--- a/style.css
+++ b/style.css
@@ -39,3 +39,42 @@
 .share{
     width: 200px;
 }
+/*hover*/
+.htext {
+    background-color:#0dcaf0;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+  .hcontainer {
+    position: relative;
+    width: 50%;
+  }
+  .himage {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .hcontainer:hover .image {
+    opacity: 0.3;
+  }
+  
+  .hcontainer:hover .middle {
+    opacity: 1;
+  }
+  
